--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,9 +1,6 @@
 AllCops:
   NewCops: enable
   Exclude:
-    - "db/**/*"
-    - "bin/*"
-    - "config/**/*"
     - "Guardfile"
     - "Rakefile"
     - "node_modules/**/*"
@@ -13,20 +10,18 @@ AllCops:
 Layout/LineLength:
   Max: 120
 Metrics/MethodLength:
-  Include:
-    - "app/controllers/*"
-    - "app/models/*"
-  Max: 20
+  Max: 26
 Metrics/AbcSize:
-  Include:
-    - "app/controllers/*"
-    - "app/models/*"
   Max: 50
 Metrics/ClassLength:
-  Max: 150
+  Max: 250
 Metrics/BlockLength:
   IgnoredMethods: ['describe']
   Max: 30
+Metrics/CyclomaticComplexity:
+  Exclude:
+    - './classes/main.rb' 
+    - 'process_choice' 
 
 Style/Documentation:
   Enabled: false
@@ -40,8 +35,6 @@ Style/DefWithParentheses:
   Enabled: false
 Style/FrozenStringLiteralComment:
   EnforcedStyle: never
-Style/HashSyntax:
-  Enabled: false
 
 Layout/HashAlignment:
   EnforcedColonStyle: key
